[gd_scene format=3 uid="uid://huxl5t7rlr3y"]

[ext_resource type="Script" uid="uid://bp3s6nf8qi2uq" path="res://main_menu.gd" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://djkqp25ltgl07" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://dgwvum6t6rckd" path="res://assets/sprites/world_tileset.png" id="3_bqqt6"]
[ext_resource type="PackedScene" uid="uid://cf522ub1b7gw8" path="res://scenes/player.tscn" id="4_wu84c"]
[ext_resource type="PackedScene" uid="uid://t3medc2cxsgh" path="res://scenes/Platform.tscn" id="5_8ln24"]
[ext_resource type="PackedScene" uid="uid://1caqgxev5j52" path="res://scenes/OneWayDown.tscn" id="6_rtw2f"]
[ext_resource type="FontFile" uid="uid://buv25bl2jqk2j" path="res://assets/fonts/PixelOperator8.ttf" id="7_oa1go"]
[ext_resource type="PackedScene" uid="uid://bu7yxm61aiqhf" path="res://scenes/Fade.tscn" id="8_tbmy8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wu84c"]
texture = ExtResource("3_bqqt6")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_8ln24"]
sources/0 = SubResource("TileSetAtlasSource_wu84c")

[node name="Main Menu" type="Node2D" unique_id=1899467654]
script = ExtResource("1_l6cm7")

[node name="Labels" type="Node" parent="." unique_id=1618953505]

[node name="Label2" type="Label" parent="Labels" unique_id=1461694430]
offset_left = 47.0
offset_top = 240.0
offset_right = 187.0
offset_bottom = 292.0
theme_override_fonts/font = ExtResource("7_oa1go")
theme_override_font_sizes/font_size = 8
text = "Arrow Keys to move
Z to Slow down Time
Shift to Sprint
You can Double Jump :D
"

[node name="Label3" type="Label" parent="Labels" unique_id=392810259]
offset_left = 43.0
offset_top = 174.0
offset_right = 183.0
offset_bottom = 226.0
theme_override_fonts/font = ExtResource("7_oa1go")
theme_override_font_sizes/font_size = 8
text = "You can move here"

[node name="Label4" type="Label" parent="Labels" unique_id=725494308]
offset_left = 215.0
offset_top = 103.0
offset_right = 395.0
offset_bottom = 170.0
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 32
text = "Jump
Knight"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="." unique_id=791450217]
position = Vector2(311, 212)
zoom = Vector2(2, 2)

[node name="TileMap" type="TileMap" parent="." unique_id=1792372467]
tile_set = SubResource("TileSet_8ln24")
format = 2
layer_0/name = "Back"
layer_0/tile_data = PackedInt32Array(196644, 65536, 11, 262180, 65536, 11, 196609, 65536, 11, 262145, 65536, 11, 327681, 65536, 11, 393217, 65536, 11, 458753, 65536, 11, 524289, 65536, 11, 589825, 65536, 11, 655361, 65536, 11, 720897, 65536, 11, 786433, 65536, 11, 851969, 65536, 11, 917505, 65536, 11, 983041, 65536, 11, 1048577, 65536, 11, 1114113, 65536, 11, 1179649, 65536, 11, 1245185, 65536, 11, 1310721, 65536, 11, 1376257, 65536, 11, 1441793, 65536, 11, 1507329, 65536, 11, 196610, 65536, 11, 262146, 65536, 11, 327682, 65536, 11, 393218, 65536, 11, 458754, 65536, 11, 524290, 65536, 11, 589826, 65536, 11, 655362, 65536, 11, 720898, 65536, 11, 786434, 65536, 11, 851970, 65536, 11, 917506, 65536, 11, 983042, 65536, 11, 1048578, 65536, 11, 1114114, 65536, 11, 1179650, 65536, 11, 1245186, 65536, 11, 1310722, 65536, 11, 1376258, 65536, 11, 1441794, 65536, 11, 1507330, 65536, 11, 196611, 65536, 11, 262147, 65536, 11, 327683, 65536, 11, 393219, 65536, 11, 458755, 65536, 11, 524291, 65536, 11, 589827, 65536, 11, 655363, 65536, 11, 720899, 65536, 11, 786435, 65536, 11, 851971, 65536, 11, 917507, 65536, 11, 983043, 65536, 11, 1048579, 65536, 11, 1114115, 65536, 11, 1179651, 65536, 11, 1245187, 65536, 11, 1310723, 65536, 11, 1376259, 65536, 11, 1441795, 65536, 11, 1507331, 65536, 11, 196612, 65536, 11, 262148, 65536, 11, 327684, 65536, 11, 393220, 65536, 11, 458756, 65536, 11, 524292, 65536, 11, 589828, 65536, 11, 655364, 65536, 11, 720900, 65536, 11, 786436, 65536, 11, 851972, 65536, 11, 917508, 65536, 11, 983044, 65536, 11, 1048580, 65536, 11, 1114116, 65536, 11, 1179652, 65536, 11, 1245188, 65536, 11, 1310724, 65536, 11, 1376260, 65536, 11, 1441796, 65536, 11, 1507332, 65536, 11, 196613, 65536, 11, 262149, 65536, 11, 327685, 65536, 11, 393221, 65536, 11, 458757, 65536, 11, 524293, 65536, 11, 589829, 65536, 11, 655365, 65536, 11, 720901, 65536, 11, 786437, 65536, 11, 851973, 65536, 11, 917509, 65536, 11, 983045, 65536, 11, 1048581, 65536, 11, 1114117, 65536, 11, 1179653, 65536, 11, 1245189, 65536, 11, 1310725, 65536, 11, 1376261, 65536, 11, 1441797, 65536, 11, 1507333, 65536, 11, 196614, 65536, 11, 262150, 65536, 11, 327686, 65536, 11, 393222, 65536, 11, 458758, 65536, 11, 524294, 65536, 11, 589830, 65536, 11, 655366, 65536, 11, 720902, 65536, 11, 786438, 65536, 11, 851974, 65536, 11, 917510, 65536, 11, 983046, 65536, 11, 1048582, 65536, 11, 1114118, 65536, 11, 1179654, 65536, 11, 1245190, 65536, 11, 1310726, 65536, 11, 1376262, 65536, 11, 1441798, 65536, 11, 1507334, 65536, 11, 196615, 65536, 11, 262151, 65536, 11, 327687, 65536, 11, 393223, 65536, 11, 458759, 65536, 11, 524295, 65536, 11, 589831, 65536, 11, 655367, 65536, 11, 720903, 65536, 11, 786439, 65536, 11, 851975, 65536, 11, 917511, 65536, 11, 983047, 65536, 11, 1048583, 65536, 11, 1114119, 65536, 11, 1179655, 65536, 11, 1245191, 65536, 11, 1310727, 65536, 11, 1376263, 65536, 11, 1441799, 65536, 11, 1507335, 65536, 11, 196616, 65536, 11, 262152, 65536, 11, 327688, 65536, 11, 393224, 65536, 11, 458760, 65536, 11, 524296, 65536, 11, 589832, 65536, 11, 655368, 65536, 11, 720904, 65536, 11, 786440, 65536, 11, 851976, 65536, 11, 917512, 65536, 11, 983048, 65536, 11, 1048584, 65536, 11, 1114120, 65536, 11, 1179656, 65536, 11, 1245192, 65536, 11, 1310728, 65536, 11, 1376264, 65536, 11, 1441800, 65536, 11, 1507336, 65536, 11, 196617, 65536, 11, 262153, 65536, 11, 327689, 65536, 11, 393225, 65536, 11, 458761, 65536, 11, 524297, 65536, 11, 589833, 65536, 11, 655369, 65536, 11, 720905, 65536, 11, 786441, 65536, 11, 851977, 65536, 11, 917513, 65536, 11, 983049, 65536, 11, 1048585, 65536, 11, 1114121, 65536, 11, 1179657, 65536, 11, 1245193, 65536, 11, 1310729, 65536, 11, 1376265, 65536, 11, 1441801, 65536, 11, 1507337, 65536, 11, 196618, 65536, 11, 262154, 65536, 11, 327690, 65536, 11, 393226, 65536, 11, 458762, 65536, 11, 524298, 65536, 11, 589834, 65536, 11, 655370, 65536, 11, 720906, 65536, 11, 786442, 65536, 11, 851978, 65536, 11, 917514, 65536, 11, 983050, 65536, 11, 1048586, 65536, 11, 1114122, 65536, 11, 1179658, 65536, 11, 1245194, 65536, 11, 1310730, 65536, 11, 1376266, 65536, 11, 1441802, 65536, 11, 1507338, 65536, 11, 196619, 65536, 11, 262155, 65536, 11, 327691, 65536, 11, 393227, 65536, 11, 458763, 65536, 11, 524299, 65536, 11, 589835, 65536, 11, 655371, 65536, 11, 720907, 65536, 11, 786443, 65536, 11, 851979, 65536, 11, 917515, 65536, 11, 983051, 65536, 11, 1048587, 65536, 11, 1114123, 65536, 11, 1179659, 65536, 11, 1245195, 65536, 11, 1310731, 65536, 11, 1376267, 65536, 11, 1441803, 65536, 11, 1507339, 65536, 11, 196620, 65536, 11, 262156, 65536, 11, 327692, 65536, 11, 393228, 65536, 11, 458764, 65536, 11, 524300, 65536, 11, 589836, 65536, 11, 655372, 65536, 11, 720908, 65536, 11, 786444, 65536, 11, 851980, 65536, 11, 917516, 65536, 11, 983052, 65536, 11, 1048588, 65536, 11, 1114124, 65536, 11, 1179660, 65536, 11, 1245196, 65536, 11, 1310732, 65536, 11, 1376268, 65536, 11, 1441804, 65536, 11, 1507340, 65536, 11, 196621, 65536, 11, 262157, 65536, 11, 327693, 65536, 11, 393229, 65536, 11, 458765, 65536, 11, 524301, 65536, 11, 589837, 65536, 11, 655373, 65536, 11, 720909, 65536, 11, 786445, 65536, 11, 851981, 65536, 11, 917517, 65536, 11, 983053, 65536, 11, 1048589, 65536, 11, 1114125, 65536, 11, 1179661, 65536, 11, 1245197, 65536, 11, 1310733, 65536, 11, 1376269, 65536, 11, 1441805, 65536, 11, 1507341, 65536, 11, 196622, 65536, 11, 262158, 65536, 11, 327694, 65536, 11, 393230, 65536, 11, 458766, 65536, 11, 524302, 65536, 11, 589838, 65536, 11, 655374, 65536, 11, 720910, 65536, 11, 786446, 65536, 11, 851982, 65536, 11, 917518, 65536, 11, 983054, 65536, 11, 1048590, 65536, 11, 1114126, 65536, 11, 1179662, 65536, 11, 1245198, 65536, 11, 1310734, 65536, 11, 1376270, 65536, 11, 1441806, 65536, 11, 1507342, 65536, 11, 196623, 65536, 11, 262159, 65536, 11, 327695, 65536, 11, 393231, 65536, 11, 458767, 65536, 11, 524303, 65536, 11, 589839, 65536, 11, 655375, 65536, 11, 720911, 65536, 11, 786447, 65536, 11, 851983, 65536, 11, 917519, 65536, 11, 983055, 65536, 11, 1048591, 65536, 11, 1114127, 65536, 11, 1179663, 65536, 11, 1245199, 65536, 11, 1310735, 65536, 11, 1376271, 65536, 11, 1441807, 65536, 11, 1507343, 65536, 11, 196624, 65536, 11, 262160, 65536, 11, 327696, 65536, 11, 393232, 65536, 11, 458768, 65536, 11, 524304, 65536, 11, 589840, 65536, 11, 655376, 65536, 11, 720912, 65536, 11, 786448, 65536, 11, 851984, 65536, 11, 917520, 65536, 11, 983056, 65536, 11, 1048592, 65536, 11, 1114128, 65536, 11, 1179664, 65536, 11, 1245200, 65536, 11, 1310736, 65536, 11, 1376272, 65536, 11, 1441808, 65536, 11, 1507344, 65536, 11, 196625, 65536, 11, 262161, 65536, 11, 327697, 65536, 11, 393233, 65536, 11, 458769, 65536, 11, 524305, 65536, 11, 589841, 65536, 11, 655377, 65536, 11, 720913, 65536, 11, 786449, 65536, 11, 851985, 65536, 11, 917521, 65536, 11, 983057, 65536, 11, 1048593, 65536, 11, 1114129, 65536, 11, 1179665, 65536, 11, 1245201, 65536, 11, 1310737, 65536, 11, 1376273, 65536, 11, 1441809, 65536, 11, 1507345, 65536, 11, 196626, 65536, 11, 262162, 65536, 11, 327698, 65536, 11, 393234, 65536, 11, 458770, 65536, 11, 524306, 65536, 11, 589842, 65536, 11, 655378, 65536, 11, 720914, 65536, 11, 786450, 65536, 11, 851986, 65536, 11, 917522, 65536, 11, 983058, 65536, 11, 1048594, 65536, 11, 1114130, 65536, 11, 1179666, 65536, 11, 1245202, 65536, 11, 1310738, 65536, 11, 1376274, 65536, 11, 1441810, 65536, 11, 1507346, 65536, 11, 196627, 65536, 11, 262163, 65536, 11, 327699, 65536, 11, 393235, 65536, 11, 458771, 65536, 11, 524307, 65536, 11, 589843, 65536, 11, 655379, 65536, 11, 720915, 65536, 11, 786451, 65536, 11, 851987, 65536, 11, 917523, 65536, 11, 983059, 65536, 11, 1048595, 65536, 11, 1114131, 65536, 11, 1179667, 65536, 11, 1245203, 65536, 11, 1310739, 65536, 11, 1376275, 65536, 11, 1441811, 65536, 11, 1507347, 65536, 11, 196628, 65536, 11, 262164, 65536, 11, 327700, 65536, 11, 393236, 65536, 11, 458772, 65536, 11, 524308, 65536, 11, 589844, 65536, 11, 655380, 65536, 11, 720916, 65536, 11, 786452, 65536, 11, 851988, 65536, 11, 917524, 65536, 11, 983060, 65536, 11, 1048596, 65536, 11, 1114132, 65536, 11, 1179668, 65536, 11, 1245204, 65536, 11, 1310740, 65536, 11, 1376276, 65536, 11, 1441812, 65536, 11, 1507348, 65536, 11, 196629, 65536, 11, 262165, 65536, 11, 327701, 65536, 11, 393237, 65536, 11, 458773, 65536, 11, 524309, 65536, 11, 589845, 65536, 11, 655381, 65536, 11, 720917, 65536, 11, 786453, 65536, 11, 851989, 65536, 11, 917525, 65536, 11, 983061, 65536, 11, 1048597, 65536, 11, 1114133, 65536, 11, 1179669, 65536, 11, 1245205, 65536, 11, 1310741, 65536, 11, 1376277, 65536, 11, 1441813, 65536, 11, 1507349, 65536, 11, 196630, 65536, 11, 262166, 65536, 11, 327702, 65536, 11, 393238, 65536, 11, 458774, 65536, 11, 524310, 65536, 11, 589846, 65536, 11, 655382, 65536, 11, 720918, 65536, 11, 786454, 65536, 11, 851990, 65536, 11, 917526, 65536, 11, 983062, 65536, 11, 1048598, 65536, 11, 1114134, 65536, 11, 1179670, 65536, 11, 1245206, 65536, 11, 1310742, 65536, 11, 1376278, 65536, 11, 1441814, 65536, 11, 1507350, 65536, 11, 196631, 65536, 11, 262167, 65536, 11, 327703, 65536, 11, 393239, 65536, 11, 458775, 65536, 11, 524311, 65536, 11, 589847, 65536, 11, 655383, 65536, 11, 720919, 65536, 11, 786455, 65536, 11, 851991, 65536, 11, 917527, 65536, 11, 983063, 65536, 11, 1048599, 65536, 11, 1114135, 65536, 11, 1179671, 65536, 11, 1245207, 65536, 11, 1310743, 65536, 11, 1376279, 65536, 11, 1441815, 65536, 11, 1507351, 65536, 11, 196632, 65536, 11, 262168, 65536, 11, 327704, 65536, 11, 393240, 65536, 11, 458776, 65536, 11, 524312, 65536, 11, 589848, 65536, 11, 655384, 65536, 11, 720920, 65536, 11, 786456, 65536, 11, 851992, 65536, 11, 917528, 65536, 11, 983064, 65536, 11, 1048600, 65536, 11, 1114136, 65536, 11, 1179672, 65536, 11, 1245208, 65536, 11, 1310744, 65536, 11, 1376280, 65536, 11, 1441816, 65536, 11, 1507352, 65536, 11, 196633, 65536, 11, 262169, 65536, 11, 327705, 65536, 11, 393241, 65536, 11, 458777, 65536, 11, 524313, 65536, 11, 589849, 65536, 11, 655385, 65536, 11, 720921, 65536, 11, 786457, 65536, 11, 851993, 65536, 11, 917529, 65536, 11, 983065, 65536, 11, 1048601, 65536, 11, 1114137, 65536, 11, 1179673, 65536, 11, 1245209, 65536, 11, 1310745, 65536, 11, 1376281, 65536, 11, 1441817, 65536, 11, 1507353, 65536, 11, 196634, 65536, 11, 262170, 65536, 11, 327706, 65536, 11, 393242, 65536, 11, 458778, 65536, 11, 524314, 65536, 11, 589850, 65536, 11, 655386, 65536, 11, 720922, 65536, 11, 786458, 65536, 11, 851994, 65536, 11, 917530, 65536, 11, 983066, 65536, 11, 1048602, 65536, 11, 1114138, 65536, 11, 1179674, 65536, 11, 1245210, 65536, 11, 1310746, 65536, 11, 1376282, 65536, 11, 1441818, 65536, 11, 1507354, 65536, 11, 196635, 65536, 11, 262171, 65536, 11, 327707, 65536, 11, 393243, 65536, 11, 458779, 65536, 11, 524315, 65536, 11, 589851, 65536, 11, 655387, 65536, 11, 720923, 65536, 11, 786459, 65536, 11, 851995, 65536, 11, 917531, 65536, 11, 983067, 65536, 11, 1048603, 65536, 11, 1114139, 65536, 11, 1179675, 65536, 11, 1245211, 65536, 11, 1310747, 65536, 11, 1376283, 65536, 11, 1441819, 65536, 11, 1507355, 65536, 11, 196636, 65536, 11, 262172, 65536, 11, 327708, 65536, 11, 393244, 65536, 11, 458780, 65536, 11, 524316, 65536, 11, 589852, 65536, 11, 655388, 65536, 11, 720924, 65536, 11, 786460, 65536, 11, 851996, 65536, 11, 917532, 65536, 11, 983068, 65536, 11, 1048604, 65536, 11, 1114140, 65536, 11, 1179676, 65536, 11, 1245212, 65536, 11, 1310748, 65536, 11, 1376284, 65536, 11, 1441820, 65536, 11, 1507356, 65536, 11, 196637, 65536, 11, 262173, 65536, 11, 327709, 65536, 11, 393245, 65536, 11, 458781, 65536, 11, 524317, 65536, 11, 589853, 65536, 11, 655389, 65536, 11, 720925, 65536, 11, 786461, 65536, 11, 851997, 65536, 11, 917533, 65536, 11, 983069, 65536, 11, 1048605, 65536, 11, 1114141, 65536, 11, 1179677, 65536, 11, 1245213, 65536, 11, 1310749, 65536, 11, 1376285, 65536, 11, 1441821, 65536, 11, 1507357, 65536, 11, 196638, 65536, 11, 262174, 65536, 11, 327710, 65536, 11, 393246, 65536, 11, 458782, 65536, 11, 524318, 65536, 11, 589854, 65536, 11, 655390, 65536, 11, 720926, 65536, 11, 786462, 65536, 11, 851998, 65536, 11, 917534, 65536, 11, 983070, 65536, 11, 1048606, 65536, 11, 1114142, 65536, 11, 1179678, 65536, 11, 1245214, 65536, 11, 1310750, 65536, 11, 1376286, 65536, 11, 1441822, 65536, 11, 1507358, 65536, 11, 196639, 65536, 11, 262175, 65536, 11, 327711, 65536, 11, 393247, 65536, 11, 458783, 65536, 11, 524319, 65536, 11, 589855, 65536, 11, 655391, 65536, 11, 720927, 65536, 11, 786463, 65536, 11, 851999, 65536, 11, 917535, 65536, 11, 983071, 65536, 11, 1048607, 65536, 11, 1114143, 65536, 11, 1179679, 65536, 11, 1245215, 65536, 11, 1310751, 65536, 11, 1376287, 65536, 11, 1441823, 65536, 11, 1507359, 65536, 11, 196640, 65536, 11, 262176, 65536, 11, 327712, 65536, 11, 393248, 65536, 11, 458784, 65536, 11, 524320, 65536, 11, 589856, 65536, 11, 655392, 65536, 11, 720928, 65536, 11, 786464, 65536, 11, 852000, 65536, 11, 917536, 65536, 11, 983072, 65536, 11, 1048608, 65536, 11, 1114144, 65536, 11, 1179680, 65536, 11, 1245216, 65536, 11, 1310752, 65536, 11, 1376288, 65536, 11, 1441824, 65536, 11, 1507360, 65536, 11, 196641, 65536, 11, 262177, 65536, 11, 327713, 65536, 11, 393249, 65536, 11, 458785, 65536, 11, 524321, 65536, 11, 589857, 65536, 11, 655393, 65536, 11, 720929, 65536, 11, 786465, 65536, 11, 852001, 65536, 11, 917537, 65536, 11, 983073, 65536, 11, 1048609, 65536, 11, 1114145, 65536, 11, 1179681, 65536, 11, 1245217, 65536, 11, 1310753, 65536, 11, 1376289, 65536, 11, 1441825, 65536, 11, 1507361, 65536, 11, 196642, 65536, 11, 262178, 65536, 11, 327714, 65536, 11, 393250, 65536, 11, 458786, 65536, 11, 524322, 65536, 11, 589858, 65536, 11, 655394, 65536, 11, 720930, 65536, 11, 786466, 65536, 11, 852002, 65536, 11, 917538, 65536, 11, 983074, 65536, 11, 1048610, 65536, 11, 1114146, 65536, 11, 1179682, 65536, 11, 1245218, 65536, 11, 1310754, 65536, 11, 1376290, 65536, 11, 1441826, 65536, 11, 1507362, 65536, 11, 196643, 65536, 11, 262179, 65536, 11, 327715, 65536, 11, 393251, 65536, 11, 458787, 65536, 11, 524323, 65536, 11, 589859, 65536, 11, 655395, 65536, 11, 720931, 65536, 11, 786467, 65536, 11, 852003, 65536, 11, 917539, 65536, 11, 983075, 65536, 11, 1048611, 65536, 11, 1114147, 65536, 11, 1179683, 65536, 11, 1245219, 65536, 11, 1310755, 65536, 11, 1376291, 65536, 11, 1441827, 65536, 11, 1507363, 65536, 11, 327716, 65536, 11, 393252, 65536, 11, 458788, 65536, 11, 524324, 65536, 11, 589860, 65536, 11, 655396, 65536, 11, 720932, 65536, 11, 786468, 65536, 11, 852004, 65536, 11, 917540, 65536, 11, 983076, 65536, 11, 1048612, 65536, 11, 1114148, 65536, 11, 1179684, 65536, 11, 1245220, 65536, 11, 1310756, 65536, 11, 1376292, 65536, 11, 1441828, 65536, 11, 1507364, 65536, 11, 196645, 65536, 11, 262181, 65536, 11, 327717, 65536, 11, 393253, 65536, 11, 458789, 65536, 11, 524325, 65536, 11, 589861, 65536, 11, 655397, 65536, 11, 720933, 65536, 11, 786469, 65536, 11, 852005, 65536, 11, 917541, 65536, 11, 983077, 65536, 11, 1048613, 65536, 11, 1114149, 65536, 11, 1179685, 65536, 11, 1245221, 65536, 11, 1310757, 65536, 11, 1376293, 65536, 11, 1441829, 65536, 11, 1507365, 65536, 11)
layer_1/name = "Front"

[node name="Button Manager" type="Control" parent="." unique_id=1187601759]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Quit Game" type="Button" parent="Button Manager" unique_id=388994082]
layout_mode = 0
offset_left = 264.0
offset_top = 297.0
offset_right = 349.0
offset_bottom = 319.0
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 8
text = "Leave Game"

[node name="Stage Select" type="Button" parent="Button Manager" unique_id=211931229]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.4540001
anchor_bottom = 2.216
offset_left = 216.0
offset_top = 246.0
offset_right = 341.84
offset_bottom = 188.36
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 16
text = "Select Stage"

[node name="Reset Data" type="Button" parent="Button Manager" unique_id=98397059]
layout_mode = 0
offset_left = 473.0
offset_top = 330.0
offset_right = 574.0
offset_bottom = 361.0
text = "RESET DATA"

[node name="Start" type="Button" parent="Button Manager" unique_id=840737167]
layout_mode = 1
anchors_preset = -1
offset_left = 245.0
offset_top = 198.0
offset_right = 370.0
offset_bottom = 231.0
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 16
text = "START"

[node name="Player" parent="." unique_id=935256915 instance=ExtResource("4_wu84c")]
position = Vector2(64, 184)

[node name="Platforms" type="Node" parent="." unique_id=1511914515]

[node name="Starting Platform" parent="Platforms" unique_id=278107600 instance=ExtResource("5_8ln24")]
position = Vector2(63, 223)

[node name="Start Platform" parent="Platforms" unique_id=1199803560 instance=ExtResource("6_rtw2f")]
visible = false
position = Vector2(309, 212.00002)
scale = Vector2(4, 3.9)

[node name="Main Menu Platform" parent="Platforms" unique_id=186162020 instance=ExtResource("6_rtw2f")]
visible = false
position = Vector2(311, 259)
scale = Vector2(6, 3.9)

[node name="Start Platform2" parent="Platforms" unique_id=1725775763 instance=ExtResource("6_rtw2f")]
visible = false
position = Vector2(307, 306.00006)
scale = Vector2(2.7, 3)

[node name="fade_transition" parent="." unique_id=1228228395 instance=ExtResource("8_tbmy8")]
visible = false
offset_left = -22.0
offset_top = 1.0
offset_right = 714.0
offset_bottom = 490.0

[node name="fade_timer" type="Timer" parent="fade_transition" unique_id=1867884138]

[connection signal="pressed" from="Button Manager/Quit Game" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="Button Manager/Stage Select" to="." method="_on_stage_select_pressed"]
[connection signal="pressed" from="Button Manager/Reset Data" to="." method="_on_reset_data_pressed"]
[connection signal="pressed" from="Button Manager/Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="fade_transition/fade_timer" to="." method="_on_fade_timer_timeout"]
